# rust_book_tests

./: .vimspector.json  Cargo.toml  README.md  bookmark
restaurant/src/: lib.rs
src/: enums.rs  errors.rs  generics.rs  guess.rs  hash.rs  lib.rs  lifetimes.rs  main.rs  ownership.rs  slices.rs  strings.rs  structs.rs  traits.rs  variables.rs  vectors.rs
