[package]
name = "rust-tests"
version = "0.1.0"
edition = "2021"
default-run = "main"

[profile.release]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[bin]]
name = "guess"
path = "src/guess.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "variables"
path = "src/variables.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "slices"
path = "src/slices.rs"

[[bin]]
name = "structs"
path = "src/structs.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"

[[bin]]
name = "vectors"
path = "src/vectors.rs"

[[bin]]
name = "strings"
path = "src/strings.rs"

[[bin]]
name = "hash"
path = "src/hash.rs"

[[bin]]
name = "errors"
path = "src/errors.rs"
